knew connection file

--- a/views/newPost.handlebars
+++ b/views/newPost.handlebars
@@ -1,1 +1,13 @@
 <p>new post</p>
+<div>
+    <form action="/api/post" method="POST">
+        <p>title</p>
+        <input type="text">
+        <p>content</p>
+        <input type="text">
+        <p>username</p>
+        <input type="text">
+
+        <button>post</button>
+    </form>
+</div>
