--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,1 +1,18 @@
 <p>home</p>
+{{#each posts as |post| }}
+<div>
+    <title>
+        {{title}}
+    </title>
+    <h2>
+        {{username}}
+    </h2>
+    <p>
+        {{content}}
+    </p>
+    <p>
+        {{date}}
+    </p>
+
+</div>
+{{/each}}
